// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addTrades WS  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    true,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    false,
  ],
]
`;

exports[`addTrades WS  no trade 1`] = `Array []`;

exports[`addTrades WS no tradeStatusLastUpdatedAt 1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    false,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    false,
  ],
]
`;

exports[`already initialized 1`] = `
Object {
  "filterByTimestamp": true,
  "inflationRequired": false,
  "isLowercase": false,
  "orderBooksInterval": 2,
  "priceInversed": false,
  "quoteInversed": true,
  "separator": "",
  "supportWS": true,
  "tradesInterval": 2,
  "wsLink": "",
}
`;

exports[`fetchTrades WS  1`] = `
Array [
  Array [
    "open",
    [Function],
  ],
  Array [
    "message",
    [Function],
  ],
  Array [
    "close",
    [Function],
  ],
  Array [
    "error",
    [Function],
  ],
]
`;

exports[`fetchTrades WS  2`] = `
Array [
  Array [
    "quote-base",
  ],
  Object {
    "on": [MockFunction] {
      "calls": Array [
        Array [
          "open",
          [Function],
        ],
        Array [
          "message",
          [Function],
        ],
        Array [
          "close",
          [Function],
        ],
        Array [
          "error",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    },
    "removeAllListeners": [MockFunction],
    "terminate": [MockFunction],
  },
]
`;

exports[`fetchTrades WS  3`] = `
Array [
  "message from ws server",
  Object {
    "on": [MockFunction] {
      "calls": Array [
        Array [
          "open",
          [Function],
        ],
        Array [
          "message",
          [Function],
        ],
        Array [
          "close",
          [Function],
        ],
        Array [
          "error",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    },
    "removeAllListeners": [MockFunction],
    "terminate": [MockFunction],
  },
]
`;

exports[`fetchTrades WS  4`] = `
Array [
  Array [
    [Function],
    1000,
  ],
  Array [
    [Function],
    1000,
  ],
]
`;

exports[`fetchTrades WS  5`] = `
Array [
  Array [
    Array [
      "quote-base",
    ],
  ],
  Array [
    Array [
      "quote-base",
    ],
  ],
]
`;

exports[`fetchTrades, supportWs false 1`] = `
Array [
  Array [
    [Function],
    2000,
  ],
]
`;

exports[`fetchTrades, supportWs false 2`] = `
Array [
  Array [
    "quote-base",
  ],
  Array [
    "quote-base",
  ],
]
`;

exports[`getSourcePairs  1`] = `
Array [
  "BASEQUOTE",
]
`;

exports[`getSourcePairs , not quoteInversed , isLowerCase true 1`] = `
Array [
  "basequote",
]
`;

exports[`getSourcePairs isLowerCase 1`] = `
Array [
  "quotebase",
]
`;

exports[`getSourcePairs quoteInversed 1`] = `
Array [
  "QUOTEBASE",
]
`;

exports[`getSourcePairs, assetId wrong  1`] = `Array []`;

exports[`handleWSTradeMessage 1`] = `"tradeMessage[object Object]"`;

exports[`handleWSTradeMessage, with extra 1`] = `"tradeMessageExtra"`;

exports[`handleWSTradeOpen 1`] = `"pair1,pair2url"`;
